--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,16 @@
 Package: bcdata
 Type: Package
-Title: Descarga los datos publicados por el Banco Central de RD (Title Case)
+Title: Descarga los datos publicados por el Banco Central de RD
 Version: 0.1.0
-Author: Johan Rosa
-Maintainer: Johan Rosa <johan.rosaperez@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: person("Johan", "Rosa", email = "johan.rosaperez@gmail.com", role = c("aut", "cre"))
+Description: Funciones para descargar datos de la pagina web del Banco Central
+    de la Republica Dominicana, permitiendo tener acceso a las series sin los
+    elementos inecesarios que caracterizan a los archivos con fines de
+    publicacion. 
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports:
-    dplyr,
-    tidyr,
-    ggplot2,
-    janitor,
-    lubridate,
-    purrr
+URL: http:johan-rosa.com
+RoxygenNote: 7.1.0
+Suggests: 
+    testthat
