--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Encoding: UTF-8
 LazyData: true
 URL: http:johan-rosa.com
 RoxygenNote: 7.1.0
-Tmports:
+Imports:
     dplyr
     tidyr
     stringr
